<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pinball Map</string>
    <string name="select_region">PinballMap.com contains over 80 distinct regional pinball maps. Find yours, and help keep it up to date!</string>
    <string name="splash_image_desc">Splash Image</string>
    <string name="splash_image_city_desc">City Splash Image</string>
    <string name="about_head">About Pinball Map</string>
    <string name="pbm_web"><a href="http://pinballmap.com">pinballmap.com</a></string>
    <string name="about_text">\tMade By\n\t\tScott Wainstock\n\t\tRyan Gratzer\n\t\tBrian Dols\n\n\tArtwork\n\t\tDrew Marshall</string>
    <string name="sass_description">A beautiful kitten</string>
    <string name="enter_machine">Enter the machine name, or select it from the list</string>
    <string name="enter_condition">Click the box below to enter a machine description</string>
    <string name="add_machine">Add</string>
    <string name="submit_description">Submit button</string>
    <string name="machine_comment">Machine Comment: </string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="location_type">Location Type:</string>
    <string name="enter_operator">Operator:</string>
    <string name="edit_location_data">Edit Data At:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="blank"> </string>
    <string name="city">City:</string>
    <string name="name">Location Name:</string>
    <string name="street">Street:</string>
    <string name="state">State:</string>
    <string name="phone">Phone:</string>
    <string name="zip">Zip:</string>
    <string name="machines">Machines:</string>
    <string name="operator">Operator:</string>
    <string name="website">Website:</string>
    <string name="website_link">WEBSITE</string>
    <string name="submit_a_location">Submit a Location to the Map</string>
    <string name="submit_text"> Submit </string>
    <string name="machine_button_desc">Click to edit machine</string>
    <string name="map_button">Show on map</string>
    <string name="edit_button">Edit Location Info</string>
    <string name="nav_button">Show navigation directions</string>
    <string name="add_machine_button">Add a machine</string>
    <string name="remove_button">Remove machine</string>
    <string name="search_hint">Search here</string>
    <string name="submitter_name">Your Name:</string>
    <string name="submitter_email">Your Email:</string>
    <string name="contact_admin">Send a message to your region\'s admin!</string>
    <string name="message">Message:</string>
    <string name="submit_a_region">When requesting a new map for your area, please describe WHY one should be added. Does your region have an active pinball scene? Leagues? How many locations have pinball machines? Are you keeping track of them already? Would you be willing to act as the regional administrator, to help curate your map\'s data? The more details you give us, the better your request sounds!</string>
    <string name="comments">Comments:</string>
    <string name="region_name">Region Name:</string>
    <string name="updated_on">Updated:</string>
    <string name="sort_alphabetically">Sorted Alphabetically</string>
    <string name="sort_by_distance">Sorted by Distance</string>
    <string name="contact_region_admin">Contact Region Admin</string>
    <string name="suggest_location">Suggest A Location</string>
    <string name="change_region">Change Region</string>
    <string name="suggest_region">Suggest A New Region</string>
    <string name="about">About</string>
    <string name="quit">Quit</string>
    <string name="profile">Your Profile</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="description">Location Description</string>
    <string name="sample_machine_name">Machine (Chicago Coin, 2048)</string>
    <string name="sample_condition_from_user">machine notes </string>
    <string name="sample_condition_meta">Updated 10/23/16 by howdybro</string>
    <string name="loading_regions">Loading regions</string>
    <string name="location_confirm">Confirm location is up to date</string>
    <string name="score_text">Enter Your Score</string>
    <string name="condition_text">Enter a Condition Report</string>
    <string name="edit_location">Edit Location</string>
    <string name="sign_up">SIGN UP and help keep your map up to date! Thanks!</string>
    <string name="login_to_update">Login to update this location"</string>
    <string name="login_to_add_condition">Login to leave a condition report</string>
    <string name="login_to_add_score">Login to add your high score</string>
    <string name="login_to_remove_machine">Login to remove machine</string>
    <string name="donate_head">Donate to Pinball Map</string>
    <string name="donate"><![CDATA[
        <p>Since 2007, we\'ve spent countless evenings and weekends building, maintaining, and enhancing Pinball Map. We\'re grateful that so many people find it useful.</p>
        <p>But as the site has grown in popularity and scope, the infrastructure costs have also grown. To help us defray these costs, we\'re asking for donations. We\'ve never made money off of this site, and we want it to remain ad-free.</p>
        <p>Here are the costs, and thus our donation goals:</p>
        <p>$110/year - Dreamhost; $20/year - Domain; $192/year - Database + SSL Encryption; $100/year - Apple Developer Fee</p>
        <p>GRAND TOTAL: $422</p>
        <p>If you like Pinball Map and want to help support it, you have our heartfelt thanks! - Scott and Ryan</p>
    ]]></string>
    <string name="store_head">Stuff for Sale</string>
    <string name="store">Because it\'s quicker to update a website than an app, we kindly request that you visit the web store to see what we have on offer. Last we checked, we have t-shirts for sale!</string>
    <string name="none_yet">None yet</string>
    <string name="please_allow_location_permission">Please enable the Location permission inside Settings > App > Permissions</string>
    <string name="permission_required_toast">Permission is required to access this feature</string>
    <string name="location_permission_denied">Location permission is needed. Please try again and grant access to use the location</string>
    <string name="permission_rationale_location">Access to the location service is required, which shows your current location on the map.</string>
</resources>
