<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
    android:background="#EFEFEF">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#EFEFEF"
        android:padding="10dp">

        <TextView
            android:id="@+id/submitLocationId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_a_location"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:background="@drawable/header_bg"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/nameTextView"
            android:text="@string/name"
            android:labelFor="@+id/nameField"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/nameField"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:inputType="text"
            android:ems="10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textbox_bg"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp">
             <requestFocus/>
        </EditText>

        <TextView
            android:id="@+id/streetTextView"
            android:text="@string/street"
            android:labelFor="@+id/streetField"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/streetField"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textbox_bg"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/cityTextView"
            android:text="@string/city"
            android:labelFor="@+id/cityField"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/cityField"
            android:inputType="text"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:ems="10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textbox_bg"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/stateTextView"
            android:text="@string/state"
            android:labelFor="@+id/stateField"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/stateField"
            android:inputType="text"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:ems="10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textbox_bg"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/zipTextView"
            android:text="@string/zip"
            android:labelFor="@+id/zipField"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/zipField"
            android:inputType="text"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:ems="10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textbox_bg"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/phoneTextView"
            android:text="@string/phone"
            android:labelFor="@+id/phoneField"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/phoneField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textbox_bg"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:ems="10"
            android:inputType="phone"/>

        <TextView
            android:id="@+id/websiteTextView"
            android:text="@string/website"
            android:labelFor="@+id/websiteField"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/websiteField"
            android:inputType="text"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:ems="10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textbox_bg"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/operatorTextView"
            android:text="@string/operator"
            android:labelFor="@+id/operatorField"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/operatorField"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:inputType="text"
            android:ems="10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textbox_bg"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp" />
        <TextView
            android:id="@+id/machinesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/multiAutoCompleteTextView1"
            android:text="@string/machines"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="20sp" />

        <MultiAutoCompleteTextView
            android:id="@+id/autoCompleteMachinesTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textbox_bg"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="6dp"
            android:ems="10"
            android:maxWidth="300dp"
            android:width="300dp"/>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="buttonOnClick"
            android:text="@string/submit_text"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/input_btn"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</ScrollView>