<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FEFBF8"
    android:padding="10dp">

    <TextView
        android:id="@+id/editLocationText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_location"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#6E5335"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/header_bg"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/enterPhoneHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editLocationText"
        android:text="@string/phone_number"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/phoneNumber"
        android:labelFor="@+id/phoneNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/enterPhoneHeader"
        android:background="@drawable/textbox_bg"
        android:ems="10"
        android:inputType="phone"/>

    <TextView
        android:id="@+id/enterLocationTypeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/phoneNumber"
        android:layout_marginTop="16dp"
        android:text="@string/location_type"
        android:textSize="20sp"/>

    <Spinner
        android:id="@+id/locationTypeSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/spinner_style"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/enterLocationTypeHeader" />

    <TextView
        android:id="@+id/enterWebsiteHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/locationTypeSpinner"
        android:layout_marginTop="16dp"
        android:text="@string/website"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editWebsite"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/enterWebsiteHeader"
        android:background="@drawable/textbox_bg"
        android:ems="10"
        android:inputType="textUri"
        android:labelFor="@+id/editWebsite"/>

    <TextView
        android:id="@+id/enterDescriptionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editWebsite"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/enterDescriptionHeader"
        android:background="@drawable/textbox_bg"
        android:ems="10"
        android:inputType="textUri"
        android:labelFor="@+id/editDescription"/>

    <TextView
        android:id="@+id/enterOperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editDescription"
        android:layout_marginTop="16dp"
        android:text="@string/enter_operator"
        android:textSize="20sp"/>

    <Spinner
        android:id="@+id/operatorSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/spinner_style"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/enterOperator" />

    <Button
        android:id="@+id/submitLocationEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:onClick="clickHandler"
        android:text="@string/submit"
        android:layout_alignParentTop="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false"
        android:background="@drawable/input_btn"
        android:textColor="#FFFFFF"
        android:textSize="22sp" />

</RelativeLayout>