<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
    android:background="#EFEFEF">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#EFEFEF"
        android:padding="10dp">

        <TextView
            android:id="@+id/suggestRegionText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/suggest_region"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#303030"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/submit_region_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_a_region"
            android:textSize="16sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="10dp"
            android:background="#dcdcdc" />

        <TextView
            android:id="@+id/regionNameTextView"
            android:text="@string/region_name"
            android:labelFor="@+id/regionNameField"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/regionNameField"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:inputType="text"
            android:ems="10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textbox_bg"
            android:layout_marginRight="6dp" />

        <TextView
            android:id="@+id/commentsTextView"
            android:text="@string/comments"
            android:labelFor="@+id/commentsField"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/commentsField"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:inputType="textMultiLine"
            android:lines="7"
            android:ems="10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textbox_bg"
            android:layout_marginRight="6dp" >
        </EditText>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonOnClick"
            android:text="@string/submit_text"
            android:textColor="#7c7c7c"
            android:background="@drawable/input_btn"
            android:textSize="22sp"
            android:minHeight="36dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:elevation="2dp"
            android:layout_centerHorizontal="true"/>

    </LinearLayout>
</ScrollView>