<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
    android:fillViewport="false"
    android:background="@color/background">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/background"
        android:padding="10dp">

        <TextView
            android:id="@+id/contact_admin_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darkText"
            android:layout_centerHorizontal="true"
            android:text="@string/contact_admin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:padding="10dp"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/messageTextView"
            android:text="@string/message"
            android:labelFor="@+id/messageField"
            android:layout_below="@+id/contact_admin_id"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/messageField"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_below="@+id/messageTextView"
            android:background="@drawable/textbox_bg"
            android:inputType="textMultiLine"
            android:lines="10"
            android:ems="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp" >
            <requestFocus/>
        </EditText>

        <Button
            android:id="@+id/button1"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/messageField"
            android:onClick="buttonOnClick"
            android:text="@string/submit_text"
            android:textColor="@color/lightText"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="36dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@drawable/input_btn"
            android:textSize="22sp"
            android:layout_marginBottom="5dp"
            android:elevation="2dp" />

    </RelativeLayout>
</ScrollView>